@@ -4,35 +4,20 @@
 
 	<groupId>com.mycompany</groupId>
 	<artifactId>testproject</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <packaging>mule-application</packaging>
+       <version>1.0.0-SNAPSHOT</version>
+       <packaging>mule-application</packaging>
+      <name>testproject</name>
 
-	<name>testproject</name>
-
-    <properties>
+      <properties>
    
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<app.runtime>4.2.4</app.runtime>
 		<mule.maven.plugin.version>3.1.6</mule.maven.plugin.version>
-	 
-	   <munit.version>2.1.4</munit.version>
-	   <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-       <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-       <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
-       <sonar.language>java</sonar.language>
-	 
-               
+	       <munit.version>2.1.4</munit.version>
                <mule.tools.version>1.7</mule.tools.version>
-  	           <sonar.sources>src/main/mule,src/test/munit</sonar.sources> 
-  	           <jacoco.version>0.7.2.201409121644</jacoco.version> 
- <jacoco.outputDir>${project.build.directory}</jacoco.outputDir> 
- 
- 
- 
-	
-    </properties>
+  	    </properties>
 
 	<build>
 		<plugins>
@@ -44,124 +29,8 @@
 				<configuration>
 				</configuration>
 			</plugin>
-			
-    <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>${jacoco.agent.ut.arg}</argLine>
-                    <!-- Specific to generate mapping between tests and covered code -->
-                    <properties>
-                        <property>
-                            <name>listener</name>
-                            <value>org.sonar.java.jacoco.JUnitListener</value>
-                        </property>
-                    </properties>
-                    <!-- test failure ignore -->
-                    <testFailureIgnore>true</testFailureIgnore>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <configuration>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m ${jacoco.agent.it.arg}
-                    </argLine>
-                    <!-- Specific to generate mapping between tests and covered code -->
-                    <properties>
-                        <property>
-                            <name>listener</name>
-                            <value>org.sonar.java.jacoco.JUnitListener</value>
-                        </property>
-                    </properties>
-                    <!-- Let's put failsafe reports with surefire to have access to tests 
-                        failures/success reports in sonar -->
-                    <reportsDirectory>${project.build.directory}/surefire-reports
-                    </reportsDirectory>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${jacoco.version}</version>
-                <executions>
-                    <!-- Prepares a variable, jacoco.agent.ut.arg, that contains the info 
-                        to be passed to the JVM hosting the code being tested. -->
-                    <execution>
-                        <id>prepare-ut-agent</id>
-                        <phase>process-test-classes</phase>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                        <configuration>
-                            <destFile>${sonar.jacoco.reportPath}</destFile>
-                            <propertyName>jacoco.agent.ut.arg</propertyName>
-                            <append>true</append>
-                        </configuration>
-                    </execution>
-                    <!-- Prepares a variable, jacoco.agent.it.arg, that contains the info 
-                        to be passed to the JVM hosting the code being tested. -->
-                    <execution>
-                        <id>prepare-it-agent</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                        <configuration>
-                            <destFile>${sonar.jacoco.itReportPath}</destFile>
-                            <propertyName>jacoco.agent.it.arg</propertyName>
-                            <append>true</append>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-   
-		<plugin>
-                <groupId>com.mulesoft.munit.tools</groupId>
-                <artifactId>munit-maven-plugin</artifactId>
-                <version>${munit.version}</version>
-                <executions>
-                    <execution>
-                        <id>test</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>test</goal>
-                            <goal>coverage-report</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <runtimeVersion>4.2.0</runtimeVersion>
-			<coverage>
-                        <runCoverage>true</runCoverage>
-                        <formats>
-                            <format>html</format>
-                        </formats>
-                    </coverage>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>integration-test</id>
-                        <phase>integration-test</phase>
-                        <goals>
-                            <goal>integration-test</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>verify</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-	</build>
+              </plugins>
+     </build>
 	
 
 	<dependencies>
@@ -176,26 +45,22 @@
             <artifactId>mule-sockets-connector</artifactId>
             <version>1.1.2</version>
             <classifier>mule-plugin</classifier>
-        </dependency>
-		<dependency>
+         </dependency>
+	<dependency>
             <groupId>com.mulesoft.munit</groupId>
             <artifactId>munit-runner</artifactId>
             <version>2.1.4</version>
             <classifier>mule-plugin</classifier>
             <scope>test</scope>
-        </dependency>	<dependency>
+         </dependency>	
+	<dependency>
             <groupId>com.mulesoft.munit</groupId>
             <artifactId>munit-tools</artifactId>
             <version>2.1.4</version>
             <classifier>mule-plugin</classifier>
             <scope>test</scope>
         </dependency>
-         <dependency>
-    <groupId>org.codehaus.sonar-plugins.java</groupId>
-    <artifactId>sonar-jacoco-listeners</artifactId>
-    <version>3.2</version>
-    <scope>test</scope>
-</dependency>
+        
     </dependencies>
 
 	<repositories>
